--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,11 @@
 <footer class="footer">
-  <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</span>
-</footer> 
+  <span class="footer__copyright">&copy;
+    {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is licensed under a
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+      Creative Commons Attribution-ShareAlike 4.0 International License
+    </a>.
+  </span>
+</footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript" src="{{ "js/main.js" | prepend: site.baseurl }}"></script>
