--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <span class="footer__copyright">&copy;
     {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is licensed under a
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+    <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
       Creative Commons Attribution-ShareAlike 4.0 International License
     </a>.
   </span>
