--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,14 @@
 
         <div class="navigation-wrapper">
 
-          <nav class="cover-navigation cover-navigation--primary">
-            <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
-            </ul>
-          </nav>
+          {% if site.blog %}
+            <!-- Blog button§ -->
+            <nav class="cover-navigation cover-navigation--primary">
+              <ul class="navigation">
+                <li class="navigation__item"><a href="{{ site.baseurl }}#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              </ul>
+            </nav>
+          {% endif %}
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
